# package build
# https://peps.python.org/pep-0517/
[build-system]
requires = ["setuptools>=65", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

# package basics
# https://peps.python.org/pep-0621/
[project]
name = "bioio"
description = "Image reading, metadata management, and image writing for Microscopy images in Python"
keywords = []
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD License" }
authors = [
  { email = "evamaxfieldbrown@gmail.com", name = "Eva Maxfield Brown" },
  { email = "danielt@alleninstitute.org", name = "Dan Toloudis" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
  # We always pin a specific version of bioio-base with
  # each release so that we avoid bioio + bioio-base misalignment.
  "bioio-base==3.0.0",
  "dask[array]>=2021.4.1",
  "numpy>=1.21.0",
  "ome-types[lxml]>=0.4.0",
  "semver>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/bioio-devs/bioio"
"Bug Tracker" = "https://github.com/bioio-devs/bioio/issues"
Documentation = "https://bioio-devs.github.io/bioio"
"User Support" = "https://github.com/bioio-devs/bioio/issues"

# extra dependencies
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
lint = [
  "pre-commit>=2.20.0",
]
test = [
  "coverage>=5.1",
  "fsspec[http]>=2022.8.0",
  "pytest>=5.4.3",
  "pytest-cov>=2.9.0",
  "pytest-raises>=0.11",
  "quilt3",  # no pin to avoid pip cycling (boto is really hard to manage)
]
docs = [
  "gitchangelog>=3.0.4",
  "Sphinx>=8.0.0",
  "furo>=2022.4.7",
  "numpydoc",
  "sphinx-copybutton",
  "myst-parser>=1.0",
  "linkify-it-py>=2.0.0",
]
dev = [
  "ipython>=8.4.0",
]

# entry points
# https://peps.python.org/pep-0621/#entry-points
# [project.entry-points."console_scripts"]

# build settings
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*docs/*", "*tests/*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "py.typed"]

# tools
[tool.black]
line-length = 88

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
use_parentheses = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
  ".editorconfig",
  ".pre-commit-config.yaml",
  ".gitchangelog.rc",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
  "Justfile",
  ".cookiecutter.yaml",
  "*docs/**",
  "*tests/**",
]

[tool.mypy]
files = "bioio/*.py"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

# https://flake8.pycqa.org/en/latest/user/options.html
# https://gitlab.com/durko/flake8-pyprojecttoml
[tool.flake8]
max-line-length = 88
ignore = "E203,E402,W291,W503"
min-python-version = "3.10.0"
per-file-ignores = [
  "__init__.py:F401",
]
